package maidsafe;

message GenericResponse {
  required uint32 result = 1;
}

message GenericPacket {
  required bytes data = 1;
  required bytes signature = 2;
}

// vault configuration details for adding to config file.
message VaultConfig {
  required bytes pmid_public = 1;
  required bytes pmid_private = 2;
  required bytes signed_pmid_public = 3;
  optional bytes vault_dir = 4;
  optional int32 port = 5;
  optional uint64 available_space = 6;
  optional uint64 used_space = 7;
}

message EndPoint {
  repeated bytes ip = 1;
  repeated uint32 port = 2;
}

message SignedSize {
  required uint64 data_size = 1;
  required bytes signature = 2;  // data_size (as a string) signed
  required bytes pmid = 3;  // client's or Chunk Info holder's PMID (for Store
                            // Chunk or DeleteChunk respectively)
  required bytes public_key = 4;
  required bytes public_key_signature = 5;
}

message StoreContract {
  message InnerContract {
    required uint32 result = 1;  // whether the vault will store the chunk
    required SignedSize signed_size = 2;
  }
  required InnerContract inner_contract = 1;
  required bytes signature = 2;  // Signature of serialised inner_contract
  required bytes pmid = 3;  // vault's PMID
  required bytes public_key = 4;
  required bytes public_key_signature = 5;
}